kids page changes
